--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>HTML</title>
     <style>
-        h1{
-            font-size: 65px;
-            color: orange;
-        }
-        ul{
-            background-color: grey;
-        }
-        .background1 {
-            background-color: greenyellow;
-        }
+      body {
+        font-size: 16px;
+      }
+      h1 {
+        font-size: 65px;
+        color: orange;
+        font-family: sans-serif;
+      }
+      p {
+        font-weight: 600;
+        font-size: 3em;
+      }
+      ul {
+        background-color: grey;
+        font-style: oblique;
+        line-height: 200%;
+        text-align: justify;
+        text-decoration: dashed;
+      }
+      .background1 {
+        background-color: grey;
+      }
+      #yellow {
+        background-color: yellow;
+      }
+      #red {
+        background-color: red;
+      }
+      #brown {
+        background-color: brown;
+      }
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
     <p class="background1">Qual é a sua cor favorita?</p>
     <ul class="background1">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="yellow">Amarelo</li>
+      <li id="red">Vermelho</li>
+      <li id="brown">Marrom</li>
     </ul>
   </body>
 </html>
