--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
@@ -48,16 +48,30 @@
         - document.getElementsByClassName()
         - document.getElementsByTagName()*/
  // Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)
-function tagP (text) {
-  document.getElementsByTagName("p")[0].innerText = text;
+
+function howDoISeeMyself2Years () {
+  document.getElementsByTagName("p")[0].innerText = 'eu me imagino trabalhando na Editora Jambô';
 }
 
-tagP ("eu me imagino trabalhando na Editora Jambô");
-/*
- Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
- Crie uma função que mude a cor do quadrado vermelho para branco.
- Crie uma função que corrija o texto da tag <h1>.
- Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
+ // Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
+
+ function greenMainContent () {
+  document.getElementsByClassName("main-content")[0].style.backgroundColor = 'rgb(76,164,109)'
+ }
+
+ // Crie uma função que mude a cor do quadrado vermelho para branco.
+
+ function redCenterContent () {
+   document.getElementsByClassName("center-content")[0].style.backgroundColor = 'white'
+ }
+
+ // Crie uma função que corrija o texto da tag <h1>.
+
+  function correctTextH1 () {
+    document.getElementsByClassName('title')[0].innerText = 'Exercício 5.1 - JavaScript';
+  }
+  
+ /* Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
  Crie uma função que exiba o conteúdo de todas as tags <p> no console.
         */
     </script>
