--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Exercício 5.1</title>
-    
+
     <style>
-      main, section {
+      main,
+      section {
         border-color: black;
         border-style: solid;
       }
@@ -31,9 +32,9 @@
     </style>
   </head>
   <body>
-    <header> 
-      <h1 class="title">Exercício 5.1 - JavaEscripito </h1>
-    </header>    
+    <header>
+      <h1 class="title">Exercício 5.1 - JavaEscripito</h1>
+    </header>
     <main class="main-content">
       <section class="center-content">
         <p>Texto padrão do nosso site</p>
@@ -42,38 +43,51 @@
       </section>
     </main>
     <script>
-        /*
+      /*
         Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
         - document.getElementById()
         - document.getElementsByClassName()
         - document.getElementsByTagName()*/
- // Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)
+      // Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)
 
-function howDoISeeMyself2Years () {
-  document.getElementsByTagName("p")[0].innerText = 'eu me imagino trabalhando na Editora Jambô';
-}
+      function howDoISeeMyself2Years() {
+        for (let i = 0; i < document.getElementsByTagName("p").length; i += 1) {
+          document.getElementsByTagName("p")[i].innerText = "eu me imagino trabalhando na Editora Jambô";
+        }
+      }
+      // Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
 
- // Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
+      function greenMainContent() {
+        document.getElementsByClassName(
+          "main-content"
+        )[0].style.backgroundColor = "rgb(76,164,109)";
+      }
 
- function greenMainContent () {
-  document.getElementsByClassName("main-content")[0].style.backgroundColor = 'rgb(76,164,109)'
- }
+      // Crie uma função que mude a cor do quadrado vermelho para branco.
 
- // Crie uma função que mude a cor do quadrado vermelho para branco.
+      function redCenterContent() {
+        document.getElementsByClassName(
+          "center-content"
+        )[0].style.backgroundColor = "white";
+      }
 
- function redCenterContent () {
-   document.getElementsByClassName("center-content")[0].style.backgroundColor = 'white'
- }
+      // Crie uma função que corrija o texto da tag <h1>.
 
- // Crie uma função que corrija o texto da tag <h1>.
+      function correctTextH1() {
+        document.getElementsByClassName("title")[0].innerText =
+          "Exercício 5.1 - JavaScript";
+      }
 
-  function correctTextH1 () {
-    document.getElementsByClassName('title')[0].innerText = 'Exercício 5.1 - JavaScript';
-  }
-  
- /* Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
- Crie uma função que exiba o conteúdo de todas as tags <p> no console.
-        */
+      // Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
+
+      function tagPToUpperCase() {
+        for (let i = 0; i < document.getElementsByTagName('p').length; i += 1) {
+          document.getElementsByTagName('p')[i].style.textTransform = 'uppercase';
+        }
+      }
+      
+      /*Crie uma função que exiba o conteúdo de todas as tags <p> no console.
+       */
     </script>
   </body>
 </html>
