--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
@@ -85,9 +85,14 @@
           document.getElementsByTagName('p')[i].style.textTransform = 'uppercase';
         }
       }
+
+      //Crie uma função que exiba o conteúdo de todas as tags <p> no console.
       
-      /*Crie uma função que exiba o conteúdo de todas as tags <p> no console.
-       */
+      function showPContentsOnConsole () {
+        for (let i = 0; i < document.getElementsByTagName('p').length; i += 1) {
+          console.log(document.getElementsByTagName('p')[i].innerHTML);
+        }
+      }
     </script>
   </body>
 </html>
