questão 2, adiciona o botão de submit

--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
@@ -79,6 +79,7 @@
           </label>
         </div>
       </main>
+      <input type="submit" value="Enviar" class="submit-btn ">
     </form>
     <script src="script.js"></script>
   </body>
