questão 3, adicionar preventDefault no submit

--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
@@ -41,16 +41,16 @@
           <fieldset>
             <legend>Destino Preferido</legend>
             <label for="destiny-1">
-              <input type="radio" name="destino-favorito" id="destiny-1" />Cidade
+              <input type="radio" name="destino-favorito" id="destiny-1" value="city"/>Cidade
             </label>
             <label for="destiny-2">
-              <input type="radio" name="destino-favorito" id="destiny-2" />Campo
+              <input type="radio" name="destino-favorito" id="destiny-2" value="camp"/>Campo
             </label>
             <label for="destiny-3">
-              <input type="radio" name="destino-favorito" id="destiny-3" />Praia
+              <input type="radio" name="destino-favorito" id="destiny-3" value="beach"/>Praia
             </label>
             <label for="destiny-4">
-              <input type="radio" name="destino-favorito" id="destiny-4" />Montanhas
+              <input type="radio" name="destino-favorito" id="destiny-4" value="mountain"/>Montanhas
             </label>
           </fieldset>
         </div>
@@ -79,7 +79,7 @@
           </label>
         </div>
       </main>
-      <input type="submit" value="Enviar" class="submit-btn ">
+      <input type="submit" value="Enviar" class="submit-btn">
     </form>
     <script src="script.js"></script>
   </body>
