questão 4, adiciona botão de limpar campos

--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
@@ -79,7 +79,8 @@
           </label>
         </div>
       </main>
-      <input type="submit" value="Enviar" class="submit-btn">
+      <input type="submit" value="Enviar" id="submit-btn" class="support-btn">
+      <input type="button" value="Limpar" id="clean-btn" class="support-btn">
     </form>
     <script src="script.js"></script>
   </body>
